# mysql-plugin-is-mallinfo

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  config.h.in  configure  configure.in
config/: ac_mysql.m4
src/: Makefile.am  Makefile.in  is_mallinfo.cc  is_mallinfo_config.h.in
