# Used to build Makefile.in

INCLUDES =   $(MYSQL_INC)
noinst_HEADERS = 
lib_LTLIBRARIES = is_mallinfo.la
is_mallinfo_la_SOURCES = is_mallinfo.cc
is_mallinfo_la_LIBADD =
is_mallinfo_la_LDFLAGS =  -module
is_mallinfo_la_CFLAGS = $(AM_CFLAGS) -DMYSQL_DYNAMIC_PLUGIN
is_mallinfo_la_CXXFLAGS = $(AM_CFLAGS) -DMYSQL_DYNAMIC_PLUGIN

